update NotificationStatus
