# HiСlass.Backend/HiClass.Application/Handlers/EntityHandlers/InvitationHandlers/Commands/ChangeInvitationStatus/UpdateInvitationStatusCommand.cs
@@ -1,11 +1,12 @@
 using System.ComponentModel.DataAnnotations;
+using HiClass.Domain.Enums;
 using MediatR;
 
 namespace HiClass.Application.Handlers.EntityHandlers.InvitationHandlers.Commands.ChangeInvitationStatus;
 
-public class ChangeInvitationStatusCommand : IRequest
+public class UpdateInvitationStatusCommand : IRequest
 {
     [Required] public Guid InvitationId { get; set; }
     [Required] public Guid UserId { get; set; }
-    [Required] public bool IsAccepted { get; set; }
+    [Required] public InvitationStatus Status { get; set; }
 }
