# HiСlass.Backend/HiClass.Application/Handlers/EntityHandlers/NotificationHandlers/Commands/UpdateNotificationStatus/UpdateNotificationStatusCommand.cs
@@ -1,0 +1,11 @@
+using HiClass.Domain.Enums;
+using MediatR;
+
+namespace HiClass.Application.Handlers.EntityHandlers.NotificationHandlers.Commands.UpdateNotificationStatus;
+
+public class UpdateNotificationStatusCommand : IRequest
+{
+    public Guid NotificationId { get; set; }
+
+    public NotificationStatus Status { get; set; }
+}
