# HiСlass.Backend/HiClass.Application/Models/Invitations/ChangeInvitationStatus/ChangeInvitationStatus.cs
@@ -1,7 +1,0 @@
-namespace HiClass.Application.Models.Invitations.ChangeInvitationStatus;
-
-public class ChangeInvitationStatusRequestDto
-{
-    public Guid InvitationId { get; set; }
-    public bool IsAccepted { get; set; }
-}
